--- a/App/app/src/main/res/layout/annonce_formulaire.xml
+++ b/App/app/src/main/res/layout/annonce_formulaire.xml
@@ -7,7 +7,7 @@
     tools:context=".FormulaireActivity">
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/profilClientHint"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
@@ -34,7 +34,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView4">
+        app:layout_constraintTop_toBottomOf="@+id/profilClientHint">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
