--- a/App/app/src/main/res/layout/activity_connexion.xml
+++ b/App/app/src/main/res/layout/activity_connexion.xml
@@ -47,8 +47,8 @@
 
             <TextView
                 android:id="@+id/textViewMail"
-                android:layout_width="71dp"
-                android:layout_height="29dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginBottom="10dp"
                 android:text="E-mail"
