--- a/App/app/src/main/res/layout/activity_formulaire_client_general.xml
+++ b/App/app/src/main/res/layout/activity_formulaire_client_general.xml
@@ -62,7 +62,7 @@
 
             <TextView
                 android:id="@+id/textViewMail"
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginBottom="10dp"
@@ -87,8 +87,8 @@
 
             <TextView
                 android:id="@+id/textNumTel"
-                android:layout_width="109dp"
-                android:layout_height="21dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginBottom="10dp"
                 android:text="N° téléphone"
@@ -98,8 +98,8 @@
 
             <TextView
                 android:id="@+id/textNumTel2"
-                android:layout_width="113dp"
-                android:layout_height="23dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginBottom="10dp"
                 android:text="Mot de passe"
@@ -135,8 +135,8 @@
 
             <TextView
                 android:id="@+id/textAdresse"
-                android:layout_width="109dp"
-                android:layout_height="21dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginBottom="10dp"
                 android:text="Adresse"
