--- a/App/app/src/main/res/layout/activity_formulaire_offre_start.xml
+++ b/App/app/src/main/res/layout/activity_formulaire_offre_start.xml
@@ -5,7 +5,7 @@
     android:id="@+id/constraintLayoutFormulaireAutreB"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".FormulaireAutreBActivity">
+    tools:context=".FormulaireOffreStart">
 
     <TextView
         android:id="@+id/textViewEtapeB"
@@ -69,7 +69,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/textTitreEtapeB" />
 
             <Button
-                android:id="@+id/boutonSuivantB"
+                android:id="@+id/offreSuivantB"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
 
