--- a/App/app/src/main/res/layout/annonce_vue.xml
+++ b/App/app/src/main/res/layout/annonce_vue.xml
@@ -75,7 +75,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
             <Button
-                android:id="@+id/validerAnnonceBouton"
+                android:id="@+id/boutonValider"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
